--- a/layouts/instructions/list.html
+++ b/layouts/instructions/list.html
@@ -5,12 +5,12 @@
 		<h1 style="position: absolute; bottom: 0; font-size: 3rem">{{ .Title }}</h1>
 	</div>
 	
-	<div class="description">
+	<!-- <div class="description">
 		{{ .TableOfContents }}
-	</div>
+	</div> -->
 </div>
 
-<section class="content" style="padding-left: 4rem; padding-right: 4rem">
+<section class="content">
 	{{ .Content }}
 </section>
 
