--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -33,3 +33,5 @@
 @import "pages/team";
 @import "pages/faq";
 @import "pages/code_of_conduct";
+@import "pages/requirements";
+@import "partials/instructions";
