--- a/src/styles/_root.scss
+++ b/src/styles/_root.scss
@@ -1,5 +1,5 @@
 :root {
-  --primary: #1976d2;
+  --primary: #627b86;
   --primary-txt: #fff;
 
 
@@ -39,7 +39,7 @@
   --breakpoint-lg: 60rem; // 960px
   --breakpoint-xl: 71.25rem; // 1140px
 
-  --container-margin: 10vw;
+  --container-margin: 15vw;
   --container-margin-mobile: 3vw;
   --toolbar-height: 3.25rem;
 
